ARM: imx: armadillo_iotg_addon: Use mctrl_gpio
linux-3.16で追加されたmctrl_gpioを利用する。

linux-3.14-atに実装した"fsl,rs485-tx-gate-type"はもう必要無い。

--- a/arch/arm/mach-imx/armadillo_iotg_addon/addon_atmark_techno_rs485_iotg_g3_intf1.dts
+++ b/arch/arm/mach-imx/armadillo_iotg_addon/addon_atmark_techno_rs485_iotg_g3_intf1.dts
@@ -37,8 +37,7 @@
 
 			rs485-rts-active-high;
 			rs485-enabled-at-boot-time;
-			fsl,rs485-tx-gate-type = "gpio";
-			fsl,rs485-tx-gate-gpio = <&gpio7 12 0>;
+			rts-gpio = <&gpio7 12 0>;
 			fsl,rs485-rx-gate-type = "gpio";
 			fsl,rs485-rx-gate-gpio = <&gpio7 13 0>;
 			fsl,rs485-rx-gate-active-low;
