--- a/arch/arm/mach-imx/armadillo_iotg_addon/addon_atmark_techno_rs485_iotg_g3_intf2.dts
+++ b/arch/arm/mach-imx/armadillo_iotg_addon/addon_atmark_techno_rs485_iotg_g3_intf2.dts
@@ -37,8 +37,7 @@
 
 			rs485-rts-active-high;
 			rs485-enabled-at-boot-time;
-			fsl,rs485-tx-gate-type = "gpio";
-			fsl,rs485-tx-gate-gpio = <&gpio4 2 0>;
+			rts-gpio = <&gpio4 2 0>;
 			fsl,rs485-rx-gate-type = "gpio";
 			fsl,rs485-rx-gate-gpio = <&gpio5 11 0>;
 			fsl,rs485-rx-gate-active-low;
